<resources>
    <string name="app_name">MAD Mini Project</string>
    <string name="Increment_button">+</string>
    <string name="decrement_button">-</string>
    <string name="Display_total">LKR 230,000.00</string>
    <string name="dropdown_category">Select Category</string>
    <string name="dropdown_product">Select Product</string>
    <string name="Add_button">ADD ITEM</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="create_button">+  Create Your Quotation</string>
    <string name="delete_button">DELETE</string>
    <string name="checkout_button">CHECK OUT</string>
    <string name="change_Qname">My Quotation 1</string>
    <string name="home_name">NITROTECH</string>
    <string name="home_text">C O M P U T E R</string>
    <string name="home_text2">S O L U T I O N S</string>
    <string name="home_laptop">LAPTOPS</string>
    <string name="home_pcparts">PARTS</string>
    <string name="home_build">BUILD PC</string>
    <string name="home_profile">PROFILE</string>
    <string name="laptop_manage">Laptop Management</string>
    <string name="spare_part">Spare Part Management</string>
    <string name="pc_build">PC Build Orders</string>
    <string name="add">ADD</string>
    <string name="edit_button">EDIT</string>
    <string name="orders_button">ORDERS</string>
    <string name="view_order_button">VIEW ORDER</string>
    <string name="view_button">VIEW</string>
    <string name="user_name">Chamath123</string>
    <string name="complete_botton">COMPLETE</string>
    <string name="username_bildOredr">Chamath123 Build Order</string>
    <string name="address">Address :</string>
    <string name="Phone_num">Phone No :</string>
    <string name="Amount">Amount :</string>
    <string name="get_payment_button">GET PAYMENT SLIP</string>
    <string name="down_quotation">DOWNLOAD QUOTATION</string>
</resources>