<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C24"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="73dp"
        android:background="#22FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/imageButton13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/icons8_laptop_100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="348dp"
        android:layout_height="99dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="6dp"
        android:text="@string/home_name"
        android:textColor="#FF9404"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/home_text"
        android:textColor="#FF9404"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:text="@string/home_text2"
        android:textColor="#FF9404"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/build__1_" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/webp_net_resizeimage1" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton12"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@drawable/webp_net_resizeimage" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="122dp"
        android:text="@string/home_laptop"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="63dp"
        android:text="@string/home_pcparts"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="114dp"
        android:text="@string/home_build"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton12" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="54dp"
        android:text="@string/home_profile"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/imageButton14" />
</androidx.constraintlayout.widget.ConstraintLayout>