<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#181C24"
        tools:context=".MainActivity2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomNavigationView"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginTop="80dp"
            android:background="#FF9404"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:background="#00FFFFFF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icons8_home_page_48" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="97dp"
                android:layout_marginEnd="82dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/imageButton5"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icons8_shopping_cart_48" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="48dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icons8_female_profile_48" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="4dp"
            android:background="#32FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_marginStart="78dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="59dp"
                android:text="@string/laptop_manage"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="26dp"
                android:text="@string/edit_button"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:text="@string/orders_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout5"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:layout_marginTop="53dp"
            android:background="#32FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="271dp"
                android:layout_height="56dp"
                android:layout_marginStart="74dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/spare_part"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="19dp"
                android:text="@string/add"
                app:layout_constraintEnd_toStartOf="@+id/button15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/edit_button"
                app:layout_constraintEnd_toStartOf="@+id/button16"
                app:layout_constraintStart_toEndOf="@+id/button13"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/orders_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button15"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout6"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="1dp"
            android:background="#32FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="276dp"
                android:layout_height="44dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="58dp"
                android:text="@string/pc_build"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="123dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="173dp"
                android:text="@string/view_order_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout></ScrollView>